--- a/app/src/main/res/drawable/custom_btn_shape.xml
+++ b/app/src/main/res/drawable/custom_btn_shape.xml
@@ -6,7 +6,6 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp"/>
-    <stroke android:color="@color/greyish" android:width="1dp"/>
-    <solid android:color="@color/limeWhite"/>
-    <size android:height="200dp" android:width="200dp"/>
+    <stroke android:color="@color/purple_700" android:width="1dp"/>
+<!--    <size android:height="200dp" android:width="200dp"/>-->
 </shape>
