--- a/app/src/main/res/layout/activity_bank_transfer.xml
+++ b/app/src/main/res/layout/activity_bank_transfer.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:overScrollMode="never"
-    android:background="@color/white"
+    android:background="@color/limeWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UI.bankTransfer">
     <LinearLayout
-        android:layout_gravity="center"
+        android:layout_gravity="center|top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -47,34 +47,33 @@
             android:layout_height="wrap_content"
             android:text="AMOUNT TO TRANSFER"
             android:layout_gravity="start"
-            android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginStart="13dp" />
+            android:layout_marginStart="12dp" />
         <EditText
+            android:cursorVisible="false"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:maxLength="6"
             android:hint="Enter Amount"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:theme="@style/myStyle"
             android:background="@drawable/home_activity_shape_all"
             android:id="@+id/ammoutText"
             android:textColor="@color/black"
             android:fontFamily="@font/poppins_medium"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="70dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="25sp"/>
+            android:textSize="18sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="PAY TO ACCOUNT"
             android:layout_gravity="start"
-            android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginStart="13dp"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:gravity="center"
@@ -83,12 +82,13 @@
             android:background="@drawable/home_activity_shape_all"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="5dp"
             android:id="@+id/transaction"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_below="@id/headingLayout"
             android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,6 +134,53 @@
 
         </LinearLayout>
         <LinearLayout
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:elevation="1dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="5dp"
+            android:id="@+id/addAccount"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_below="@id/headingLayout"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_plusicon" />
+                <LinearLayout
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center"
+                    android:gravity="center|start"
+                    android:layout_weight="2"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_gravity="start|center"
+                        android:gravity="center"
+                        android:fontFamily="@font/poppins_medium"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ADD NEW ACCOUNT" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="match_parent"
@@ -146,35 +193,35 @@
                 android:background="@drawable/keyboard_layout_bg"
                 android:orientation="vertical"
                 android:id="@+id/customKeyboard"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
                 android:id="@+id/swipePayButton"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="8dp"
-                android:gravity="bottom|center"
-                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:text="MAKE PAYMENT"
                 android:background="@drawable/button_shape_3">
 
-                <TextView
-                    android:layout_margin="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:letterSpacing="0.05"
-                    android:fontFamily="@font/poppins"
-                    android:textSize="15sp"
-                    android:textColor="@color/black"
-                    android:text="Make Payment"
-                    android:textStyle="bold"/>
+<!--                <TextView-->
+<!--                    android:layout_margin="5dp"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:gravity="center"-->
+<!--                    android:letterSpacing="0.05"-->
+<!--                    android:fontFamily="@font/poppins"-->
+<!--                    android:textSize="15sp"-->
+<!--                    android:text="Make Payment"-->
+<!--                    android:textStyle="bold"/>-->
 
-            </LinearLayout>
+            </Button>
         </LinearLayout>
 
     </LinearLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
