--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/limeWhite"
     android:orientation="vertical"
     android:layout_height="wrap_content"
     tools:context=".payment.CheckoutActivity">
@@ -15,7 +16,7 @@
         <RelativeLayout
             android:id="@+id/headingLayout"
             android:background="@drawable/home_activity_shape_all"
-            android:layout_margin="10dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -36,7 +37,7 @@
                     android:layout_gravity="center"
                     android:text="Payment Confirmation"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="17sp"
                     android:textStyle="bold"
                     app:drawableTint="@color/black" />
             </LinearLayout>
@@ -51,8 +52,8 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_invoice_rafiki"/>
+                android:layout_height="300dp"
+                android:src="@drawable/ic_wpayment" />
 
             <TextView
                 android:letterSpacing="0.01"
@@ -65,7 +66,7 @@
                 android:layout_gravity="center"
                 android:text="Confirm Details"
                 android:textColor="#DC000000"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:drawableTint="@color/black" />
             <TextView
@@ -104,7 +105,7 @@
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:text="450"
-                android:textSize="29sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
             <TextView
                 android:layout_margin="10dp"
@@ -153,7 +154,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
+                android:layout_height="60dp"
                 android:background="@drawable/home_activity_shape_all"
                 android:orientation="horizontal">
 
