--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,10 @@
       android:orientation="vertical">
       <RelativeLayout
           android:background="@drawable/home_activity_shape_all"
-          android:layout_margin="10dp"
+          android:layout_marginStart="10dp"
+          android:layout_marginEnd="10dp"
+          android:layout_marginTop="10dp"
+          android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
 
@@ -56,10 +59,11 @@
               android:orientation="vertical">
 
               <TextView
+                  android:fontFamily="@font/poppins"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
-                  android:text="Overall Transactions"
+                  android:text="Total Transaction"
                   android:textColor="@color/black"
                   android:textSize="15sp" />
 
@@ -67,9 +71,9 @@
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
-                  android:layout_marginTop="10dp"
+                  android:layout_marginTop="8dp"
                   android:fontFamily="sans-serif-black"
-                  android:text="₹ 1050"
+                  android:text="₹ 0.0"
                   android:textColor="@color/black"
                   android:textSize="25sp" />
 
@@ -79,15 +83,41 @@
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:text="IMPORTANT NOTICE"
+          android:layout_gravity="start"
+          android:textStyle="normal"
+          android:layout_marginStart="15dp" />
+      <RelativeLayout
+          android:id="@+id/adui"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/portofolioUI"
+          android:layout_marginStart="12dp"
+          android:layout_marginTop="5dp"
+          android:layout_marginBottom="5dp"
+          android:layout_marginEnd="12dp"
+          android:background="@drawable/notification_shape"
+          android:elevation="0.5dp">
+
+          <ImageView
+              android:layout_width="match_parent"
+              android:layout_height="100dp"
+              android:scaleType="centerCrop"
+              android:src="@drawable/download1" />
+
+      </RelativeLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
           android:text="CHOOSE ACTION"
           android:layout_gravity="start"
-          android:textStyle="bold"
+          android:textStyle="normal"
           android:layout_marginStart="15dp" />
       <RelativeLayout
           android:id="@+id/optinLayout"
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
-          android:layout_marginBottom="10dp"
+          android:layout_marginBottom="8dp"
           android:layout_marginTop="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -108,7 +138,7 @@
               android:layout_height="wrap_content"
               android:layout_below="@id/newTransaction"
               android:layout_marginStart="0dp"
-              android:layout_marginTop="10dp"
+              android:layout_marginTop="0dp"
               android:layout_marginEnd="0dp"
               android:gravity="center"
               android:orientation="horizontal">
@@ -118,8 +148,8 @@
                   android:layout_width="match_parent"
                   android:layout_height="90dp"
                   android:layout_gravity="center"
-                  android:layout_weight="1"
                   android:layout_margin="2dp"
+                  android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
                   android:orientation="vertical">
@@ -133,10 +163,11 @@
               </LinearLayout>
 
               <LinearLayout
-                  android:layout_margin="2dp"
+                  android:id="@+id/payRent"
                   android:layout_width="match_parent"
                   android:layout_height="90dp"
                   android:layout_gravity="center"
+                  android:layout_margin="2dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -151,10 +182,10 @@
               </LinearLayout>
 
               <LinearLayout
-                  android:layout_margin="2dp"
                   android:layout_width="match_parent"
                   android:layout_height="90dp"
                   android:layout_gravity="center"
+                  android:layout_margin="2dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -169,10 +200,10 @@
               </LinearLayout>
 
               <LinearLayout
-                  android:layout_margin="2dp"
                   android:layout_width="match_parent"
                   android:layout_height="90dp"
                   android:layout_gravity="center"
+                  android:layout_margin="2dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -193,21 +224,23 @@
           android:layout_height="wrap_content"
           android:text="@string/last_four_transaction"
           android:layout_gravity="start"
-          android:textStyle="bold"
+          android:textStyle="normal"
           android:layout_marginStart="15dp" />
       <RelativeLayout
-          android:layout_marginEnd="10dp"
+          android:layout_marginEnd="11dp"
           android:layout_marginBottom="10dp"
-          android:layout_marginStart="10dp"
+          android:layout_marginStart="11dp"
           android:layout_marginTop="5dp"
           android:background="@drawable/home_activity_shape_all"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
 
           <androidx.recyclerview.widget.RecyclerView
+              android:layout_marginBottom="5dp"
+              tools:itemCount="4"
               android:id="@+id/TransactionRecycler"
               android:layout_width="match_parent"
-              android:layout_height="265dp"
+              android:layout_height="wrap_content"
               android:overScrollMode="ifContentScrolls"
               tools:listitem="@layout/t_list" />
 
@@ -268,7 +301,7 @@
                       android:layout_width="wrap_content"
                       android:layout_height="40dp"
                       android:layout_gravity="bottom|end"
-                      android:layout_marginTop="5dp"
+                      android:layout_marginTop="20dp"
                       android:layout_marginEnd="5dp"
                       android:background="@drawable/radius_background"
                       android:gravity="center"
