--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="activitybg">#F4F7FF</color>
     <color name="home_shape_color">#F6F8FD</color>
     <color name="custom_keyboard_col">#8D8D8E</color>
+    <color name="active_green">#08a982</color>
 </resources>
