--- a/app/src/main/res/drawable/layer.xml
+++ b/app/src/main/res/drawable/layer.xml
@@ -5,7 +5,7 @@
     <item >
         <bitmap
             android:gravity="center"
-            android:src="@drawable/crepaid"/>
+            android:src="@drawable/splash"/>
 
     </item>
 
