--- a/app/src/main/res/layout/activity_bank_transfer.xml
+++ b/app/src/main/res/layout/activity_bank_transfer.xml
@@ -189,7 +189,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="12dp"
             android:orientation="vertical">
-            <com.crepaid.keyboard.custom_keyboard
+            <com.cashix.keyboard.custom_keyboard
                 android:background="@drawable/keyboard_layout_bg"
                 android:orientation="vertical"
                 android:id="@+id/customKeyboard"
