--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,7 @@
           android:layout_height="wrap_content">
 
           <LinearLayout
+              android:gravity="center"
               android:layout_alignParentTop="true"
               android:id="@+id/headingLayout"
               android:layout_width="match_parent"
@@ -33,21 +34,22 @@
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:text="EXIT"
-                  android:drawablePadding="0dp"
+                  android:drawablePadding="5dp"
                   android:layout_gravity="center"
                   android:gravity="center|start"
                   android:textStyle="bold"
                   android:textSize="15sp"
                   android:layout_marginStart="0dp"
-                  app:drawableLeftCompat="@drawable/ic_baseline_chevron_left_24"
+                  app:drawableLeftCompat="@drawable/ic_op_left"
                   app:drawableTint="@color/black" />
               <ImageView
                   android:id="@+id/popUpMenu"
                   android:layout_marginEnd="5dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:src="@drawable/menu_ic"
-                  android:layout_gravity="center"/>
+                  android:src="@drawable/ic__op_alert"
+                  android:layout_gravity="center"
+                  app:tint="@color/black" />
           </LinearLayout>
 
           <LinearLayout
@@ -99,11 +101,14 @@
           android:background="@drawable/notification_shape"
           android:elevation="0.5dp">
 
-          <ImageView
+          <androidx.recyclerview.widget.RecyclerView
+              android:overScrollMode="never"
+              android:id="@+id/NoticeRecycler"
               android:layout_width="match_parent"
-              android:layout_height="100dp"
+              android:layout_height="95dp"
               android:scaleType="centerCrop"
-              android:src="@drawable/download1" />
+              android:src="@drawable/download1"
+              tools:listitem="@layout/notice_itemlist" />
 
       </RelativeLayout>
       <TextView
@@ -144,11 +149,12 @@
               android:orientation="horizontal">
 
               <LinearLayout
+                  android:foreground="?attr/selectableItemBackgroundBorderless"
                   android:id="@+id/BankTransfer"
                   android:layout_width="match_parent"
-                  android:layout_height="90dp"
+                  android:layout_height="80dp"
                   android:layout_gravity="center"
-                  android:layout_margin="2dp"
+                  android:layout_margin="3dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -165,9 +171,9 @@
               <LinearLayout
                   android:id="@+id/payRent"
                   android:layout_width="match_parent"
-                  android:layout_height="90dp"
+                  android:layout_height="80dp"
                   android:layout_gravity="center"
-                  android:layout_margin="2dp"
+                  android:layout_margin="3dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -182,10 +188,11 @@
               </LinearLayout>
 
               <LinearLayout
+                  android:id="@+id/walletButton"
                   android:layout_width="match_parent"
-                  android:layout_height="90dp"
+                  android:layout_height="80dp"
                   android:layout_gravity="center"
-                  android:layout_margin="2dp"
+                  android:layout_margin="3dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -200,10 +207,11 @@
               </LinearLayout>
 
               <LinearLayout
+                  android:id="@+id/moreButton"
                   android:layout_width="match_parent"
-                  android:layout_height="90dp"
+                  android:layout_height="80dp"
                   android:layout_gravity="center"
-                  android:layout_margin="2dp"
+                  android:layout_margin="3dp"
                   android:layout_weight="1"
                   android:background="@drawable/radius_background"
                   android:gravity="center"
@@ -236,12 +244,12 @@
           android:layout_height="match_parent">
 
           <androidx.recyclerview.widget.RecyclerView
-              android:layout_marginBottom="5dp"
-              tools:itemCount="4"
               android:id="@+id/TransactionRecycler"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:layout_marginBottom="5dp"
               android:overScrollMode="ifContentScrolls"
+              tools:itemCount="4"
               tools:listitem="@layout/t_list" />
 
           <ImageView
@@ -297,6 +305,7 @@
                       android:textStyle="normal" />
 
                   <Button
+                      android:id="@+id/reaMore"
                       android:textSize="11sp"
                       android:layout_width="wrap_content"
                       android:layout_height="40dp"
