--- a/app/src/main/res/layout/fragment_bank_transfer.xml
+++ b/app/src/main/res/layout/fragment_bank_transfer.xml
@@ -12,36 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-<!--        <RelativeLayout-->
-<!--            android:id="@+id/headingLayout"-->
-<!--            android:background="@drawable/home_activity_shape_all"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
-
-<!--            <LinearLayout-->
-<!--                android:gravity="start"-->
-<!--                android:layout_alignParentTop="true"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="40dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_marginStart="0dp"-->
-<!--                    android:drawablePadding="0dp"-->
-<!--                    android:fontFamily="@font/poppins"-->
-<!--                    android:gravity="center"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:text="Bank Transfer"-->
-<!--                    android:textColor="@color/black"-->
-<!--                    android:textSize="20sp"-->
-<!--                    android:textStyle="bold"-->
-<!--                    app:drawableTint="@color/black" />-->
-<!--            </LinearLayout>-->
-
-<!--        </RelativeLayout>-->
         <LinearLayout
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -49,7 +19,7 @@
             android:id="@+id/headingLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="15dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/backButton"
@@ -68,38 +38,40 @@
                 app:drawableTint="@color/black" />
         </LinearLayout>
         <TextView
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="AMOUNT TO TRANSFER"
+            android:text="@string/bank_heading"
+            android:textColor="@color/black"
+            android:textSize="23sp"
+            android:layout_marginBottom="15dp"
             android:layout_gravity="start"
             android:textStyle="bold"
             android:layout_marginStart="12dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Paying To Account"
-            android:textColor="@color/black"
-            android:layout_gravity="start"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"/>
         <LinearLayout
             android:gravity="center"
             android:layout_gravity="center"
             android:elevation="1dp"
             android:background="@drawable/home_activity_shape_all"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
             android:id="@+id/transaction"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/headingLayout"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/paying_to_account"
+                android:textColor="@color/black"
+                android:layout_gravity="start"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"/>
 
             <LinearLayout
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -108,7 +80,7 @@
                     android:layout_gravity="center"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/hdfc" />
+                    android:src="@drawable/ic_air" />
                 <LinearLayout
                     android:layout_marginTop="2dp"
                     android:layout_marginStart="10dp"
@@ -116,7 +88,7 @@
                     android:gravity="center|start"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content">
                     <TextView
                         android:textColor="@color/black"
@@ -133,6 +105,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:visibility="invisible"
                     android:padding="5dp"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -141,55 +114,44 @@
 
             </LinearLayout>
 
-        </LinearLayout>
-        <LinearLayout
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:elevation="1dp"
-            android:background="@drawable/home_activity_shape_all"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="5dp"
-            android:id="@+id/addAccount"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_below="@id/headingLayout"
-            android:orientation="vertical">
-
-
             <LinearLayout
+                android:id="@+id/EditAccount"
+                android:foreground="?attr/selectableItemBackground"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_plusicon" />
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/ic_edit_246_1" />
                 <LinearLayout
                     android:layout_marginStart="10dp"
                     android:layout_gravity="center"
                     android:gravity="center|start"
                     android:layout_weight="2"
                     android:orientation="vertical"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:layout_gravity="start|center"
+                        android:layout_gravity="start|bottom"
                         android:gravity="center"
                         android:fontFamily="@font/poppins_medium"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="ADD NEW ACCOUNT" />
+                        android:text="Edit Account" />
                 </LinearLayout>
 
             </LinearLayout>
-
         </LinearLayout>
         <LinearLayout
+            android:background="@drawable/home_activity_shape_all"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="match_parent"
@@ -199,14 +161,13 @@
             android:layout_marginBottom="12dp"
             android:orientation="vertical">
             <EditText
+                android:background="@drawable/key_board_amount_shape"
                 android:cursorVisible="false"
                 android:maxLength="6"
                 android:hint="@string/enter_amount"
                 android:theme="@style/myStyle"
-                android:background="@drawable/keyboard_layout_bg"
-                android:id="@+id/ammoutText"
+                android:id="@+id/amountText"
                 android:textColor="@color/black"
-                android:fontFamily="@font/poppins_medium"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
@@ -228,20 +189,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:text="MAKE PAYMENT"
-                android:background="@drawable/button_main_yellow">
-
-                <!--                <TextView-->
-                <!--                    android:layout_margin="5dp"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:layout_gravity="center"-->
-                <!--                    android:gravity="center"-->
-                <!--                    android:letterSpacing="0.05"-->
-                <!--                    android:fontFamily="@font/poppins"-->
-                <!--                    android:textSize="15sp"-->
-                <!--                    android:text="Make Payment"-->
-                <!--                    android:textStyle="bold"/>-->
-
+                android:textColor="@color/white"
+                android:background="@drawable/button_shape_primary">
             </Button>
         </LinearLayout>
 
