--- a/app/src/main/res/layout/fragment_validater.xml
+++ b/app/src/main/res/layout/fragment_validater.xml
@@ -151,7 +151,8 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/basic_shape"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_shape_primary"
                     android:gravity="center"
                     android:text="@string/continue_here" />
 
