--- a/app/src/main/res/layout/snackbar.xml
+++ b/app/src/main/res/layout/snackbar.xml
@@ -3,6 +3,8 @@
      android:layout_width="match_parent"
      android:layout_height="match_parent">
     <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:background="@drawable/button_shape_primary"
