--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,6 +37,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="Theme.Crepaid.Splash" >
+        <item name="android:windowBackground">@color/splash_color</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/splash_color</item>
+    </style>
     <style name="Theme.Crepaid.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.Crepaid.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
