--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/ScrollOtp"
+    android:overScrollMode="never"
+    android:scrollbars="none"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".kotlin.UI.SignUi.VerifyOTP.VerifyFragment">
-
+    android:orientation="vertical"
+    android:background="@color/limeWhite"
+    tools:context=".UI.Send_Otp_Activity">
     <RelativeLayout
         android:id="@+id/mainLayout"
         android:layout_width="match_parent"
@@ -148,7 +151,8 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@drawable/basic_shape"
+                    android:textColor="@color/white"
+                    android:background="@drawable/button_shape_primary"
                     android:gravity="center"
                     android:text="@string/continue_here" />
 
@@ -156,5 +160,6 @@
         </RelativeLayout>
 
     </RelativeLayout>
+
 
 </ScrollView>
