--- a/app/src/main/res/layout/fragment_verify.xml
+++ b/app/src/main/res/layout/fragment_verify.xml
@@ -108,7 +108,7 @@
                     android:layout_marginBottom="0dp"
                     android:cursorVisible="true"
                     android:hint="0000"
-                    android:inputType="number"
+                    android:inputType="numberPassword"
                     android:itemBackground="@drawable/login_mobile_number_bg"
                     android:padding="8dp"
                     android:textColor="#000000"
